Mon Jan 22 15:50:31 EST 2007	Nick Castellano <entropy@freetds.org>
	* src/dblib/dblib.c: print line separator after compute results

Mon Jan 22 00:56:12 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/odbc/connectparams.c src/odbc/error.c
	* src/odbc/odbc.c
	- added log entry for API functions
	* src/odbc/unittests/common.c always use '/' separator

Sat Jan 20 15:24:03 EST 2007	JK Lowden <jklowden@freetds.org>
	* include/dblib.h include/sybdb.h src/dblib/dblib.c
	- moved DBOPTION to dblib.h and removed unused members.

Sat Jan 20 01:29:36 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/defncopy.txt doc/fisql.txt cleanup formatting
	* src/apps/bsqldb.c src/dblib/dblib.c fix compute row headers

Sat Jan 20 01:30:22 EST 2007	Nick Castellano <entropy@freetds.org>
	* ChangeLog src/apps/fisql/edit.c src/apps/fisql/edit.h
	* src/apps/fisql/fisql.c src/apps/fisql/handlers.c
	* src/apps/fisql/handlers.h src/apps/fisql/interrupt.c
	* src/apps/fisql/interrupt.h src/apps/fisql/terminal.c
	* src/apps/fisql/terminal.h:
	- Fix my name and the program name

Sat Jan 20 01:20:39 EST 2007	Nick Castellano <entropy@freetds.org>
	* src/apps/fisql/fisql.c: 
	- Be slightly less stupid about compute rows.

Sat Jan 20 00:54:57 EST 2007	Nick Castellano <entropy@freetds.org>
	* src/dblib/dblib.c:
	- do not return bogus nul character in dbgetchar()

Sat Jan 20 00:35:45 EST 2007	Nick Castellano <entropy@freetds.org>
	* src/dblib/dblib.c:
	- dbspr*() functions get nul termination not line termination
	
Fri Jan 19 22:39:00 EST 2007	Nick Castellano <entropy@freetds.org>
	* doc/fisql.txt: restore compute rows BUGS entry.

Fri Jan 19 14:05:13 EST 2007	Nick Castellano <entropy@freetds.org>
	* src/apps/fisql/fisql.c: 
	- Provide xmalloc() and xrealloc() instead of relying on
	  libreadline for these.
	
Fri Jan 19 13:47:42 EST 2007	Nick Castellano <entropy@freetds.org>
	* src/apps/fisql/Makefile.am
	* src/apps/fisql/fisql.c
	* src/apps/fisql/xgetpass.c(removed)
	* src/apps/fisql/xgetpass.h(removed):