@@ -1,3 +1,6 @@
+Mon Jan 22 15:54:02 EST 2007	Nick Castellano <entropy@freetds.org>
+	* src/apps/fisql/fisql.c: fix :r with unreadable file
+
 Mon Jan 22 15:50:31 EST 2007	Nick Castellano <entropy@freetds.org>
 	* src/dblib/dblib.c: print line separator after compute results
 
